MDEV-13157 Specifying DATA DIRECTORY in tables leads to failing EXCHANGE PARTITION